--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -22,8 +22,9 @@
         color: white;
       }
     </style>
-  </head>
+      </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
   </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
